[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scripts/Scenes/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Splash.png" type="Texture" id=2]
[ext_resource path="res://Instances/CellLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/Music/SILENCE.wav" type="AudioStream" id=4]
[ext_resource path="res://Fonts/font_large.tres" type="DynamicFont" id=5]
[ext_resource path="res://Sounds/Ambient/GAMEOVER.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/Ambient/Noise.wav" type="AudioStream" id=7]
[ext_resource path="res://Sprites/Effects/Noise 1-2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Effects/Noise 2-2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Effects/Noise 3-2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Effects/Noise 4-2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Effects/Noise 5-2.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Effects/Noise 6-2.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Effects/Noise 7-2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Effects/Noise 8-2.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Effects/Noise 9-2.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Effects/Noise 10-2.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Effects/Noise 11-2.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Effects/Noise 12-2.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Effects/Noise 13-2.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Effects/Noise 15-2.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Effects/Noise 14-2.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Effects/Noise 16-2.png" type="Texture" id=23]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[node name="Node2D" type="Node2D"]

script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="." index="0"]

modulate = Color( 0, 0, 0, 1 )
position = Vector2( 80, 72 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="CellLabel" parent="." index="1" instance=ExtResource( 3 )]

text = "??"
cell_index_x = -1
cell_index_y = -1
cell_music = ExtResource( 4 )

[node name="TimerNoise" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.6
one_shot = true
autostart = true

[node name="TimerEnd" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="Label" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 45.0
margin_top = 40.0
margin_right = 121.0
margin_bottom = 109.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "GAME
OVER"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "custom_fonts" ]

[node name="SoundGameOver" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 6 )
volume_db = -3.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="SoundNoise" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 7 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Noise" type="AnimatedSprite" parent="." index="7"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false

[node name="Noise2" type="AnimatedSprite" parent="." index="8"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false

[node name="Noise3" type="AnimatedSprite" parent="." index="9"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false

[node name="Noise4" type="AnimatedSprite" parent="." index="10"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false

[node name="Noise5" type="AnimatedSprite" parent="." index="11"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false

[node name="Noise6" type="AnimatedSprite" parent="." index="12"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false

[node name="Noise7" type="AnimatedSprite" parent="." index="13"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false

[node name="Noise8" type="AnimatedSprite" parent="." index="14"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false

[node name="Noise9" type="AnimatedSprite" parent="." index="15"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false

[node name="Noise10" type="AnimatedSprite" parent="." index="16"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false
_sections_unfolded = [ "Material", "Visibility" ]

[node name="Noise11" type="AnimatedSprite" parent="." index="17"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false

[node name="Noise12" type="AnimatedSprite" parent="." index="18"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false

[node name="Noise13" type="AnimatedSprite" parent="." index="19"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false

[node name="Noise14" type="AnimatedSprite" parent="." index="20"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false

[node name="Noise15" type="AnimatedSprite" parent="." index="21"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false

[node name="Noise16" type="AnimatedSprite" parent="." index="22"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false

[node name="Noise17" type="AnimatedSprite" parent="." index="23"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false

[node name="Noise18" type="AnimatedSprite" parent="." index="24"]

modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "default"
frame = 4
playing = true
centered = false

[connection signal="timeout" from="TimerNoise" to="." method="_on_TimerNoise_timeout"]

[connection signal="timeout" from="TimerEnd" to="." method="_on_TimerEnd_timeout"]


